# fcitx-clutter

./: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  client.c  client.h  fcitxim.c  fcitximcontext.c  fcitximcontext.h
